# robotVelma

./: CMakeLists.txt  README.md  package.xml
data/: aaa.bt  aaa.ot  left_obj.ot  left_obj_copy.bt  left_obj_more.bt  left_obj_more.ot  map_left.bt  map_left.ot  map_ob1_pr1.bt  map_ob1_pr1.ot  new_map.bt  new_map.ot  our_map_pr1.ot  our_map_pr1_bt.bt  our_octomap.ot  pr2_v1.bt  pr2_v1.ot  pr2_ver1.bt  pr2_ver1.ot  pr2_ver2.bt  pr2_ver2.ot  pr2_ver3.bt  pr2_ver3.ot  pr2_ver4.bt  pr2_ver4.ot  rviz_config.rviz
data/gazebo/models/: aaa.world  pr2v1.world  pr2ver2.world  pr2ver2ver2.world  pr2ver3.world  pr2ver4.world  pr2ver4ver2.world  stero_world_lab1.world  stero_world_pr1.world  stero_world_pr1_left.world
img/: bdd_node1.vpp  bdd_node2.vpp.bak_000f  bdd_velma.vpp.bak_000f  bdd_world1.vpp.bak_000f  bdd_world2.vpp  big_sd.vpp.bak_000f  node.vpp  node.vpp.bak_000f  node.vpp.bak_001d  req1.vpp  req2.vpp  sd_pr1.vpp.bak_000f  sd_pr1_planner_octomap.vpp.bak_000f  sd_pr2.vpp  stm_pr1.vpp.bak_000f  stm_pr2.vpp.bak_000f
launch/: velma_stero_system.launch
scripts/: pr1.py  pr2.py
